--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Professional Refund Letter Generator - Get Your Money Back</title>
   <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-  <link rel="icon" type="image/x-icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>💰</text></svg>">
-  <meta name="description" content="Generate professional refund letters for airlines and hotels. Get compensation you deserve with our AI-powered tool.">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Poppins:wght@300;400;500;600;700&display=swap"
+    rel="stylesheet">
+  <link rel="icon" type="image/x-icon"
+    href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>💰</text></svg>">
+  <meta name="description"
+    content="Generate professional refund letters for airlines and hotels. Get compensation you deserve with our AI-powered tool.">
 </head>
 
 <body>
@@ -35,7 +39,8 @@
       <div class="hero-content">
         <div class="hero-text">
           <h1 class="hero-title">Get Your Money Back with Professional Refund Letters</h1>
-          <p class="hero-subtitle">Generate legally optimized refund request letters for airlines and hotels. Our AI-powered tool helps you get the compensation you deserve.</p>
+          <p class="hero-subtitle">Generate legally optimized refund request letters for airlines and hotels. Our
+            AI-powered tool helps you get the compensation you deserve.</p>
           <div class="hero-stats">
             <div class="stat">
               <span class="stat-number">95%</span>
@@ -117,11 +122,13 @@
             <div class="form-row">
               <div class="form-group">
                 <label for="companyName">Airline or Hotel Name *</label>
-                <input type="text" id="companyName" name="companyName" required placeholder="e.g., Delta Airlines, Marriott Hotel">
+                <input type="text" id="companyName" name="companyName" required
+                  placeholder="e.g., Delta Airlines, Marriott Hotel">
               </div>
               <div class="form-group">
                 <label for="bookingNumber">Booking/Ticket Number *</label>
-                <input type="text" id="bookingNumber" name="bookingNumber" required placeholder="Enter confirmation number">
+                <input type="text" id="bookingNumber" name="bookingNumber" required
+                  placeholder="Enter confirmation number">
               </div>
             </div>
 
@@ -145,7 +152,8 @@
 
             <div class="form-group">
               <label for="description">Describe Your Issue *</label>
-              <textarea id="description" name="description" rows="4" required placeholder="Provide details about what happened and how it affected your travel..."></textarea>
+              <textarea id="description" name="description" rows="4" required
+                placeholder="Provide details about what happened and how it affected your travel..."></textarea>
             </div>
 
             <div class="pricing-cards">
@@ -197,11 +205,11 @@
         <div class="letter-actions">
           <button id="copyLetter" class="btn copy-btn">📋 Copy Letter</button>
           <button id="downloadPdf" class="btn download-btn hidden" onclick="downloadPDF()">
-                        📄 Download PDF
-                    </button>
-                    <button id="shareEmail" class="share-btn hidden" onclick="shareViaEmail()">
-                        📧 Share via Email
-                    </button>
+            📄 Download PDF
+          </button>
+          <button id="shareEmail" class="share-btn hidden" onclick="shareViaEmail()">
+            📧 Share via Email
+          </button>
         </div>
       </div>
     </div>
