--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Professional Refund Letter Generator - Get Your Money Back</title>
   <link rel="stylesheet" href="style.css">
-  <link
-    href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Poppins:wght@300;400;500;600;700&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Segoe+UI:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <link rel="icon" type="image/x-icon"
     href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>💰</text></svg>">
   <meta name="description"
@@ -121,32 +119,110 @@
 
             <div class="form-row">
               <div class="form-group">
-                <label for="companyName">Airline or Hotel Name *</label>
-                <input type="text" id="companyName" name="companyName" required
-                  placeholder="e.g., Delta Airlines, Marriott Hotel">
+                <label for="serviceType">Service Type *</label>
+                <select id="serviceType" name="serviceType" required>
+                  <option value="">Select service type</option>
+                  <option value="Airline">Airline</option>
+                  <option value="Hotel">Hotel</option>
+                </select>
               </div>
               <div class="form-group">
-                <label for="bookingNumber">Booking/Ticket Number *</label>
-                <input type="text" id="bookingNumber" name="bookingNumber" required
-                  placeholder="Enter confirmation number">
+                <label for="companyName">Company Name *</label>
+                <input type="text" id="companyName" name="companyName" required
+                  placeholder="e.g., Delta Airlines, Marriott Hotel">
               </div>
             </div>
 
             <div class="form-row">
               <div class="form-group">
-                <label for="date">Date of Travel/Stay *</label>
-                <input type="date" id="date" name="date" required>
+                <label for="bookingNumber">Booking/Ticket Number *</label>
+                <input type="text" id="bookingNumber" name="bookingNumber" required
+                  placeholder="Enter confirmation number">
               </div>
               <div class="form-group">
                 <label for="issueType">Type of Issue *</label>
                 <select id="issueType" name="issueType" required>
                   <option value="">Select an issue</option>
-                  <option value="Delay">Flight/Service Delay</option>
+                  <option value="Delay">Service Delay</option>
                   <option value="Cancellation">Cancellation</option>
                   <option value="Overbooking">Overbooking</option>
                   <option value="Bad Service">Poor Service Quality</option>
                   <option value="Other">Other Issue</option>
                 </select>
+              </div>
+            </div>
+
+            <!-- Airline-specific fields -->
+            <div id="airlineFields" class="conditional-fields hidden">
+              <div class="form-row">
+                <div class="form-group">
+                  <label for="flightDate">Flight Date *</label>
+                  <input type="date" id="flightDate" name="flightDate">
+                </div>
+                <div class="form-group">
+                  <label for="departureCity">Departure City</label>
+                  <input type="text" id="departureCity" name="departureCity" placeholder="e.g., New York">
+                </div>
+              </div>
+              <div class="form-row">
+                <div class="form-group">
+                  <label for="arrivalCity">Arrival City</label>
+                  <input type="text" id="arrivalCity" name="arrivalCity" placeholder="e.g., Los Angeles">
+                </div>
+                <div class="form-group premium-field">
+                  <label for="loyaltyNumber">Loyalty Number</label>
+                  <input type="text" id="loyaltyNumber" name="loyaltyNumber" placeholder="Frequent flyer number">
+                  <small class="premium-badge">Premium Feature</small>
+                </div>
+              </div>
+            </div>
+
+            <!-- Hotel-specific fields -->
+            <div id="hotelFields" class="conditional-fields hidden">
+              <div class="form-row">
+                <div class="form-group">
+                  <label for="checkinDate">Check-in Date *</label>
+                  <input type="date" id="checkinDate" name="checkinDate">
+                </div>
+                <div class="form-group">
+                  <label for="nightsStayed">Number of Nights Stayed</label>
+                  <input type="number" id="nightsStayed" name="nightsStayed" min="1" placeholder="e.g., 3">
+                </div>
+              </div>
+              <div class="form-row">
+                <div class="form-group premium-field">
+                  <label for="hotelLoyaltyNumber">Loyalty Number</label>
+                  <input type="text" id="hotelLoyaltyNumber" name="hotelLoyaltyNumber"
+                    placeholder="Hotel rewards number">
+                  <small class="premium-badge">Premium Feature</small>
+                </div>
+                <div class="form-group premium-field">
+                  <label for="reservationPlatform">Reservation Platform</label>
+                  <input type="text" id="reservationPlatform" name="reservationPlatform"
+                    placeholder="e.g., Booking.com, Expedia">
+                  <small class="premium-badge">Premium Feature</small>
+                </div>
+              </div>
+            </div>
+
+            <!-- Premium fields for both -->
+            <div class="form-row premium-section">
+              <div class="form-group premium-field">
+                <label for="desiredOutcome">Desired Outcome</label>
+                <select id="desiredOutcome" name="desiredOutcome">
+                  <option value="">Select preferred outcome</option>
+                  <option value="Full Refund">Full Refund</option>
+                  <option value="Partial Refund">Partial Refund</option>
+                  <option value="Voucher">Voucher/Credit</option>
+                  <option value="Compensation">Monetary Compensation</option>
+                </select>
+                <small class="premium-badge">Premium Feature</small>
+              </div>
+              <div class="form-group premium-field" id="platformField">
+                <label for="generalPlatform">Booking Platform</label>
+                <input type="text" id="generalPlatform" name="generalPlatform"
+                  placeholder="e.g., Expedia, Direct booking">
+                <small class="premium-badge">Premium Feature</small>
               </div>
             </div>
 
