--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
           <button id="downloadPdf" class="btn download-btn hidden" onclick="downloadPDF()">
             📄 Download PDF
           </button>
-          <button id="shareEmail" class="share-btn hidden" onclick="shareViaEmail()">
+          <button id="shareEmail" class="btn share-btn hidden" onclick="shareViaEmail()">
             📧 Share via Email
           </button>
         </div>
